Fix spacing, add media queries

--- a/components/FooterBanner.module.css
+++ b/components/FooterBanner.module.css
@@ -1,8 +1,20 @@
 .footerBannerContainer {
   text-align: center;
-  background-color: var(--soft-blue);
-  margin-inline: -1000px;
   padding-block: 70px;
+
+  position: relative;
+  z-index: 1;
+}
+
+.footerBannerContainer::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: -500px;
+  bottom: 0;
+  left: -500px;
+  background-color: var(--soft-blue);
+  z-index: -1;
 }
 
 .footerBannerContainer p {
@@ -30,4 +42,15 @@
   padding-inline: 20px;
   width: 300px;
   border: transparent;
+}
+
+@media screen and (max-width: 580px) {
+  .footerBannerContainer form {
+    flex-direction: column;
+  }
+
+  .footerBannerContainer input {
+    width: 100%;
+    height: 48px;
+  }
 }
